footer and validation form

--- a/wp-content/themes/astor-trade/public/css/style.css
+++ b/wp-content/themes/astor-trade/public/css/style.css
@@ -1,6 +1,6 @@
 body{
     overflow-x:hidden !important;
-	width: 100% !important;
+    width: 100% !important;
 }
 
 /** ГЛАВНАЯ СТРАНИЦА **/
@@ -9,16 +9,16 @@ body{
     background-image: url(../img/bg.png);
     padding-right: 0 !important;
     padding-left: 0 !important;
-	margin-left: 0 !important;
-	margin-right: 0 !important;
+    margin-left: 0 !important;
+    margin-right: 0 !important;
 
 }
 
 .navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover{
-	background: inherit !important;
+    background: inherit !important;
 }
 .navbar-default .navbar-nav>.active>{
-	background: white !important;
+    background: white !important;
 }
 
 .logo{
@@ -43,7 +43,7 @@ body{
 }
 
 .nav.navbar-nav.sub-nav>li.active,.nav.navbar-nav.main-menu>li.active{
-background: white !important;
+    background: white !important;
 }
 
 .telephone-number a {
@@ -184,7 +184,7 @@ button.navbar-toggle{
     padding-left: 0 !important;
     padding-right: 0 !important;
     padding-top: 0 !important;
-     min-height: 465px;
+    min-height: 465px;
 
 }
 
@@ -201,7 +201,7 @@ button.navbar-toggle{
     font-family: "HelveticaNeueCyr";
     color: rgb(0, 0, 0);
     line-height: 1.2;
-	float: right;
+    float: right;
     -moz-transform: matrix( 1.12150837988827,0,0,1.12107623318386,0,0);
     -webkit-transform: matrix( 1.12150837988827,0,0,1.12107623318386,0,0);
     -ms-transform: matrix( 1.12150837988827,0,0,1.12107623318386,0,0);
@@ -230,6 +230,8 @@ button.navbar-toggle{
     border-radius: 2px;
     margin-top: 20px;
     font-weight: bold;
+    width: 110px;
+    height: 35px;
 }
 
 .text-contact-form{
@@ -322,7 +324,7 @@ button.navbar-toggle{
     padding-right: 10px;
     font-size: 18px;
     overflow: hidden;
-	float: right;
+    float: right;
     text-overflow: ellipsis;
     font-family: "HelveticaNeueCyr";
     color: rgb(224, 129, 26);
@@ -462,7 +464,6 @@ footer{
     font-family: "HelveticaNeueCyr";
     color: rgb(0, 0, 0);
     line-height: 1.2;
-    margin-top: 30px;
 }
 
 .map-contact{
@@ -730,7 +731,7 @@ p.center-text-result{
         left: 0;
         background: rgba(0,0,0,0.3);
         color:white;
-    font-size: 22px;
+        font-size: 22px;
     }
     .author{
         margin-top: 0;
@@ -739,10 +740,10 @@ p.center-text-result{
         width: 100%;
         height: 100%;
     }
-	.telephone{
-   		 padding-top: 30px;
-    	text-align: center;
-	}
+    .telephone{
+        padding-top: 30px;
+        text-align: center;
+    }
     .text-rec{
         padding-left: 0;
         padding-right: 0;
@@ -750,13 +751,13 @@ p.center-text-result{
         display: none;
     }
     .link-rec{
-            font-size: 8px;
+        font-size: 8px;
     }
     .head-rec{
-       font-size: 6px;
-    padding-left: 0;
-    padding-right: 0;
-    white-space: pre-line;
+        font-size: 6px;
+        padding-left: 0;
+        padding-right: 0;
+        white-space: pre-line;
     }
     .sub-nav li, .sub-nav{
         display: block !important;
@@ -765,12 +766,12 @@ p.center-text-result{
         padding-top: 8%;
     }
     .recomendation-block{
-           min-height: 100px;
-   				 height: 315px;
+        min-height: 100px;
+        height: 315px;
     }
 
     .img-recom-slider{
-            min-height: 184px !important;
+        min-height: 184px !important;
     }
 
 }
