--- a/wp-content/themes/astor-trade/public/css/style.css
+++ b/wp-content/themes/astor-trade/public/css/style.css
@@ -185,7 +185,7 @@ button.navbar-toggle{
     padding-right: 0 !important;
     padding-top: 0 !important;
     min-height: 465px;
-
+    position: relative;
 }
 
 .img_recom{
@@ -335,13 +335,16 @@ button.navbar-toggle{
     -ms-transform: matrix( 1.12150837988827,0,0,1.12107623318386,0,0);
 }
 .link-rec{
-    text-align: center;
     font-size: 18px;
     font-family: "HelveticaNeueCyr";
     color: rgb(0, 0, 0) !important;
     text-decoration: underline;
     line-height: 1.2;
     text-align: center;
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 
 span.glyphicon{
