--- a/wp-content/themes/astor-trade/public/css/style.css
+++ b/wp-content/themes/astor-trade/public/css/style.css
@@ -342,7 +342,7 @@ button.navbar-toggle{
     line-height: 1.2;
     text-align: center;
     position: absolute;
-    bottom: 0;
+    bottom: 15px;
     right: 0;
     left: 0;
 }
